--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
-
+  
 {
-  "name": "express-app",
+  "name": "demo-chat-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "demo chat app",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "start:server": "node server.js"
+    "test": "jasmine"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@withvoid/make-validation": "^1.0.5",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "jsonwebtoken": "8.5.1",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.4"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "mongoose": "^5.7.5",
+    "socket.io": "^2.1.1"
+  },
+  "devDependencies": {
+    "jasmine": "^3.1.0",
+    "request": "^2.87.0"
   }
 }
